2002-05-02 v0.18.1:
  * Fix compile on 64bit arches (based on patch from Chris Lawrence.)
  * Fix bug introduced in 0.18 where -g would fail on a new group with fullxover=0. (reported by "lunz")

2002-04-02 v0.18:
  * Remove fixed length buffers. (Fix errors with extremely long subjects, etc.)
  * If a group has articles from multiple servers show the shortname of the server each part is being retrieved from.
  * Don't force the connection to close on unequal line count.
  * Further additions to test suite.
  * Documented make test in README.
  * Make -h work for -r/-R too. (Only download articles from the given host.  If that host doesn't have the article, skip and flag it as an error)
  * Added a connection pool to avoid continuously reconnecting when articles are spread across different servers a lot. (suggested by Thore Harald Hoye)  (Adds new .ngetrc global opts idletimeout/maxconnections, and per-server idletimeout)
  * Added "server penalization" to avoid wasting lots of time trying to connect to dead servers. (New .ngetrc global opts penaltystrikes, initialpenalty, penaltymultiplier)
  * nget+uulib tarball includes new uulib version 0.5.18 with yEnc support.

2002-02-28 v0.17:
  * Handle invalid References starting with a '.'.
  * Fix --without-zlib build.
  * Optimized cache file loading and dupe file checking speed.
  * Added cachedir config option and NGETCACHE env var.
  * Added --test-multiserver (and test_multiserver .ngetrc option) to make -T show which servers have each file.
  * Don't show doarticle linecount warning for servers that report # of bytes counted with LF endings, then send with CRLF.
  * Some portability fixes. (Now builds on SunOS.)
  * Handle server_articles left in the cache that have no server with a matching serverid in .ngetrc.
  * .ngetrc now has global fullxover and maxstreaming options to set the default for all host entries that don't specify their own.