@@ -1,3 +1,6 @@
+2002-05-xx v0.18.2:
+  * Work around exception handling segfaults with older versions of gcc by not using multiple inheritance in exception classes. (reported by Waldemar la Tendresse)
+
 2002-05-02 v0.18.1:
   * Fix compile on 64bit arches (based on patch from Chris Lawrence.)
   * Fix bug introduced in 0.18 where -g would fail on a new group with fullxover=0. (reported by "lunz")
